--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+desktop.ini
 
 # IDE settings #
 ################
@@ -45,13 +46,38 @@ Thumbs.db
 *.cproject
 *.launch
 *.settings
-*.vscode/ 
-# Angular
+.vscode/ 
+
+# Angular / Node
 .angular/
 .angular/cache/
 frontend/.angular/
 frontend/.angular/cache/
-dist/
+frontend/coverage/
 frontend/dist/
+frontend/node_modules/
 node_modules/
+
+# Env files
+.env
+.env.*
+frontend/.env
+frontend/.env.*
+
+# Maven / Java
+backend/target/
+target/
+**/target/maven-status/
+**/target/maven-archiver/
+**/target/surefire-reports/
+
+# Logs
+*.log
+
+# Spring Boot logs
+backend/logs/
+backend/*.log
+
+# Docker local overrides
+docker-compose.override.yml
 
